# MOIQL

./: .gitignore  .python-warnings  DASHBOARD_README.md  README.md  metrics.ipynb  pyproject.toml  test_iql_config.yaml
.claude/: rules.md
Streamlit/: Home.py
Streamlit/pages/: 1_Training_Comparison.py  1_Training_Metrics.py  2_Preference_Accuracy.py  2_Simulation_Returns.py  temp_ref.py
configs/: batch-ssm.yaml  dst.yaml  highway.yaml  iql-mcmc.yaml  iql.yaml  rl-dst.yaml  rl-highway.yaml  rl.yaml  simulate-iql.yaml  simulate-rl.yaml  simulate.yaml
iql_drift/ekf_coef=0/: config.yaml  train_metrics.csv
iql_drift/ekf_coef=10/: config.yaml  expert_config.yaml  train_metrics.csv
iql_drift/pf_coef=0/: config.yaml  train_metrics.csv
iql_drift/pf_coef=20/: config.yaml  train_metrics.csv
iql_switch/ekf_coef=0/: config.yaml  train_metrics.csv
iql_switch/ekf_coef=10/: config.yaml  expert_config.yaml  train_metrics.csv
iql_switch/pf_coef=0/: config.yaml  train_metrics.csv
iql_switch/pf_coef=10/: config.yaml  train_metrics.csv
moiql_mcmc_results/20251031_155332/: best_model_info.json
moiql_mcmc_results/20251031_155452/: best_model_info.json  config.yaml
moiql_results/20251020_193209/: config.yaml  model_info.json
moiql_results/20251020_193356/: expert_config.yaml
moiql_results/ekf_coef=0/: config.yaml  train_metrics.csv
moiql_results/ekf_coef=10/: config.yaml  train_metrics.csv
moiql_results/kf_coef=0/: config.yaml  (+1 more)
scripts/: generate_preference_gif.py
src/: config.yaml  environment.py  metrics.py  model.py  train.py  train_dst.py
(+286 files in other folders)
