[project]
name = "moiql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.2.1",
    "highway-env>=1.10.1",
    "mo-gymnasium>=1.3.1",
    "numpy>=1.26.4",
    "pyyaml>=6.0.3",
    "scipy>=1.16.2",
    "torch>=2.8.0",
]
